--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="mx-20 mb-10 flex justify-between items-center max-sm:flex-col-reverse max-sm:mx-9 max-sm:text-left">
             <img src="img/logo.png" alt="logo">
             <div class="">
-                <h1 class="text-2xl font-semibold  max-sm:py-4 mb-5">Fantom on base($FTMB) </h1>
+                <h1 class="text-2xl font-semibold  max-sm:py-4 mb-5"></h1>
           
                <h1 class="text-2xl font-semibold " >Fantom on Base ($FTMB), A community of enthusiastic and excited Lovers of Fantom and Base. Community is everything, Together let's reach for the moon.</h1>
                <div class="flex gap-2 max-sm:py-4 ">
