--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <div class="">
                 <h1 class="text-2xl font-semibold  max-sm:py-4 mb-5"></h1>
           
-               <h1 class="text-2xl font-semibold " >Fantom on Base ($FTMB), A community of enthusiastic and excited Lovers of Fantom and Base. Community is everything, Together let's reach for the moon.</h1>
+               <h1 class="text-2xl font-semibold " >Bridging the world of Fantom and base with our memecoin, $FTMB is the future.
+Join in now</h1>
                <div class="flex gap-2 max-sm:py-4 ">
         
                 <button class="bg-black p-3 w-36 mt-5 rounded-2xl "> <a href="https://t.me/fantomonbase" target="_blank">Telegram</a> </button>
