--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="">
                 <h1 class="text-2xl font-semibold  max-sm:py-4 mb-5"></h1>
           
-               <h1 class="text-2xl font-semibold " >Bridging the world of Fantom and base with our memecoin, $FTMB is the future.
+               <h1 class="text-2xl font-semibold " >Bridging the worlds of Fantom and base with our memecoin, $FTMB is the future.
 Join in now</h1>
                <div class="flex gap-2 max-sm:py-4 ">
         
