--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Join in now</h1>
                     <h1>Total Supply:</h1>
                     <h1> 100m</h1>
                 </div>
-                <div class="">
+                <div class="hidden">
                     <h1>Marketing</h1>
                     <h1> 50%</h1>
                 </div>
