--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Join in now</h1>
         </div>
     </div>
     <div class="mx-20 max-sm:mx-9 mt-10 mb-10">
-        <h1 class="text-xl underline text-center">About $FTMB</h1>
+        <h1 class="text-4xl underline text-center">About $FTMB</h1>
         <h1 class="text-white font-semibold mt-5 text-left text-2xl">
             Fantom on Base ($FTMB), A community of enthusiastic and excited Lovers of Fantom and Base. Community is everything, Together let's reach for the moon.
         </h1>
